@@ -1,4 +1,4 @@
-/* $Id: tif_dir.c,v 1.75.2.1 2007-04-07 14:23:38 dron Exp $ */
+/* $Id: tif_dir.c,v 1.75.2.2 2009-01-01 00:10:43 bfriesen Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -593,7 +593,7 @@ badvalue:
 	return (0);
 badvalue32:
 	TIFFErrorExt(tif->tif_clientdata, module,
-		     "%s: Bad value %ld for \"%s\" tag",
+		     "%s: Bad value %u for \"%s\" tag",
 		     tif->tif_name, v32,
 		     _TIFFFieldWithTag(tif, tag)->field_name);
 	va_end(ap);
